Enhance HTML structure by adding viewport meta tag and improving button label visibility

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Event Listener Example</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Event Listener Demo</title>
 </head>
 <body>
-  <input type="button" id="button" value="Click Me">
+  <h1>Click the Button Below</h1>
+
+  <!-- Button we'll attach the listener to -->
+  <input type="button" id="button" value="Click Me!" />
+
+  <!-- Include your JavaScript -->
   <script src="index.js"></script>
 </body>
 </html>
